2011-10-12  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	memchr-sse2 memchr-sse2-bsf memrchr-sse2 memrchr-sse2-bsf memrchr-c
	rawmemchr-sse2 rawmemchr-sse2-bsf.
	* sysdeps/i386/i686/multiarch/memchr.S: New file.
	* sysdeps/i386/i686/multiarch/memchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/memchr-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr-c.c: New file.
	* sysdeps/i386/i686/multiarch/memrchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/memrchr-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/rawmemchr-sse2-bsf.S: New file.
	* string/memrchr.c (MEMRCHR): New macro.

2011-10-12  Ulrich Drepper  <drepper@gmail.com>

	Add integration with gcc's -ffinite-math-only and optimize wrapper
	functions in libm.
	* Versions.def: Define GLIBC_2.15 version for libm.
	* math/Makefile (headers): Add bits/math-finite.h.
	* math/bits/math-finite.h: New file.
	* sysdeps/ia64/fpu/bits/math-finite.h: New file.
	* math/Versions [libm] (GLIBC_2.15): Export __*_finite symbols.
	* math/e_acoshl.c: Add __*_finite alias.
	* math/e_acosl.c: Likewise.
	* math/e_asinl.c: Likewise.
	* math/e_atan2l.c: Likewise.
	* math/e_atanhl.c: Likewise.
	* math/e_coshl.c: Likewise.
	* math/e_exp10.c: Likewise.
	* math/e_exp10f.c: Likewise.
	* math/e_exp10l.c: Likewise.
	* math/e_exp2l.c: Likewise.
	* math/e_fmodl.c: Likewise.
	* math/e_gammal_r.c: Likewise.
	* math/e_hypotl.c: Likewise.
	* math/e_j0l.c: Likewise.
	* math/e_j1l.c: Likewise.
	* math/e_jnl.c: Likewise.
	* math/e_lgammal_r.c: Likewise.
	* math/e_log10l.c: Likewise.
	* math/e_log2l.c: Likewise.
	* math/e_logl.c: Likewise.
	* math/e_powl.c: Likewise.
	* math/e_sinhl.c: Likewise.
	* math/e_sqrtl.c: Likewise.
	* math/e_scalb.c: Completely rewritten and optimized.